--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -11,6 +11,8 @@
     <p>
         <a asp-action="Create">Registar Adoção</a> | <a asp-action="IndexArquivo">Arquivo</a>
     </p>
+
+  
 }
 else
 {
@@ -44,34 +46,62 @@ else
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreationDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Animal.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Utilizador.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
-            </td>
-            @if (User.IsInRole("Administrator"))
-            {
+            <tr>
                 <td>
+                    @Html.DisplayFor(modelItem => item.CreationDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastUpdated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Animal.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Utilizador.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
+                </td>
+                @if (User.IsInRole("Administrator"))
+                {
+                <td>
+                    <a>@Html.ActionLink("Print Adoption Slip", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
                     <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
                     <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
                 </td>
-            }
-        </tr>
+                }
+            </tr>
         }
     </tbody>
 </table>
+
+
+
+@using (Html.BeginForm())
+{
+    <p>
+        Procurar: @Html.TextBox("SearchString")
+        <!--<input type="submit" value="Procurar" />-->
+        <button type="submit" class="btn btn-default">Procurar</button>
+
+        <!--@if (ViewBag.Page > 0)
+        {
+            <a href="@Url.Action("Index", new { page = ViewBag.Page - 1 })"
+               class="btn btn-default">
+                &laquo; Anterior
+            </a>
+        }
+        @if (ViewBag.Page < ViewBag.MaxPage)
+        {
+            <a href="@Url.Action("Index", new { page = ViewBag.Page + 1 })"
+               class="btn btn-default">
+                Seguinte &raquo;
+            </a>
+        }-->
+    </p>
+}
+
