--- a/AlbergueAnimal/Views/Adocao/Create.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Create.cshtml
@@ -54,14 +54,14 @@
                         <span asp-validation-for="EndDate" class="text-danger"></span>
                     </div>-->
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Concluir" class="btn btn-default" />
                     </div>
                 </form>
             </div>
         </div>
 
         <div>
-            <a asp-action="Index">Voltar á Lista</a>
+            <a asp-action="Index">Voltar à Lista</a>
         </div>
 
         @section Scripts {
