--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -68,7 +68,7 @@ else
                 @if (User.IsInRole("Administrator"))
                 {
                 <td>
-                    <a>@Html.ActionLink("Print Adoption Slip", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
+                    <a>@Html.ActionLink("Imprimir", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
                     <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
                     <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
@@ -80,28 +80,11 @@ else
 </table>
 
 
-
 @using (Html.BeginForm())
 {
     <p>
         Procurar: @Html.TextBox("SearchString")
-        <!--<input type="submit" value="Procurar" />-->
         <button type="submit" class="btn btn-default">Procurar</button>
-
-        <!--@if (ViewBag.Page > 0)
-        {
-            <a href="@Url.Action("Index", new { page = ViewBag.Page - 1 })"
-               class="btn btn-default">
-                &laquo; Anterior
-            </a>
-        }
-        @if (ViewBag.Page < ViewBag.MaxPage)
-        {
-            <a href="@Url.Action("Index", new { page = ViewBag.Page + 1 })"
-               class="btn btn-default">
-                Seguinte &raquo;
-            </a>
-        }-->
     </p>
 }
 
