Revisão de textos

--- a/AlbergueAnimal/Views/Adocao/Details.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Details.cshtml
@@ -50,5 +50,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.AdocaoId">Editar</a> |
-    <a asp-action="Index">Voltar á Lista</a>
+    <a asp-action="Index">Voltar à Lista</a>
 </div>
