--- a/AlbergueAnimal/Views/Adocao/Edit.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Editar Adoção";
 }
 
-<h2>Editar</h2>
+<h2>Editar Adoção</h2>
 
 <hr />
 <div class="row">
@@ -50,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar á Lista</a>
+    <a asp-action="Index">Voltar à Lista</a>
 </div>
 
 @section Scripts {
