--- a/AlbergueAnimal/Views/Animals/Create.cshtml
+++ b/AlbergueAnimal/Views/Animals/Create.cshtml
@@ -69,7 +69,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar á Lista</a>
+    <a asp-action="Index">Voltar à Lista</a>
 </div>
 
 @if (!string.IsNullOrEmpty(ViewBag.Message))
