--- a/AlbergueAnimal/Views/Animals/Delete.cshtml
+++ b/AlbergueAnimal/Views/Animals/Delete.cshtml
@@ -59,6 +59,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="AnimalId" />
         <input type="submit" value="Confirmar" class="btn btn-default" /> |
-        <a asp-action="Index">Voltar á Lista</a>
+        <a asp-action="Index">Voltar à Lista</a>
     </form>
 </div>
