--- a/AlbergueAnimal/Views/Animals/Details.cshtml
+++ b/AlbergueAnimal/Views/Animals/Details.cshtml
@@ -75,6 +75,6 @@
     }
     else
     {
-        <a asp-action="Index">Voltar á Lista</a>
+        <a asp-action="Index">Voltar à Lista</a>
     }
 </div>
