--- a/AlbergueAnimal/Views/Animals/Edit.cshtml
+++ b/AlbergueAnimal/Views/Animals/Edit.cshtml
@@ -76,7 +76,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Voltar á Lista</a>
+    <a asp-action="Index">Voltar à Lista</a>
 </div>
 
 @section Scripts {
