--- a/AlbergueAnimal/Views/Adocao/Delete.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Delete.cshtml
@@ -52,6 +52,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="AdocaoId" />
         <input type="submit" value="Confirmar" class="btn btn-default" /> |
-        <a asp-action="Index">Voltar á Lista</a>
+        <a asp-action="Index">Voltar à Lista</a>
     </form>
 </div>
