Ajustes na finalização das adoções

--- a/AlbergueAnimal/Views/Adocao/Delete.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Delete.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.Utilizador)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Utilizador.Id)
+            @Html.DisplayFor(model => model.Utilizador.Nome)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.EstadoAdocao)
