--- a/AlbergueAnimal/Views/Adocao/IndexById.cshtml
+++ b/AlbergueAnimal/Views/Adocao/IndexById.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AlbergueAnimal.Models.Adocao>
+﻿@model AlbergueAnimal.Models.Adocao
 
 @{
     ViewData["Title"] = "IndexById";
@@ -6,66 +6,55 @@
 
 <h2>IndexById</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CreationDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastUpdated)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EndDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Arquivado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Animal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Utilizador)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EstadoAdocao)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreationDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Arquivado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Animal.Cor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Utilizador.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EstadoAdocao.EstadoAdocaoId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AdocaoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AdocaoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AdocaoId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div>
+    <h4>Adocao</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.CreationDate)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CreationDate)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LastUpdated)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.LastUpdated)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.EndDate)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.EndDate)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Arquivado)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Arquivado)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Animal)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Animal.Cor)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Utilizador)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Utilizador.Id)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.EstadoAdocao)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.EstadoAdocao.EstadoAdocaoId)
+        </dd>
+    </dl>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.AdocaoId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
+</div>
