--- a/AlbergueAnimal/Views/Adocao/IndexById.cshtml
+++ b/AlbergueAnimal/Views/Adocao/IndexById.cshtml
@@ -3,13 +3,31 @@
 @{
     ViewData["Title"] = "IndexById";
 }
+@*@{
+        Layout = null;
+    }*@
 
-<h2>IndexById</h2>
+@{
+    <link href="@Url.Content("~/css/site.css")" rel="stylesheet" />
+}
+<h2>Ficha de Adoção</h2>
 
 <div>
     <h4>Adocao</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            <div>
+                @{
+                    if (Model.Animal.imageContent != null && Model.Animal.imageMimeType.Contains("image"))
+                    {
+                        string imageBase64 = Convert.ToBase64String(Model.Animal.imageContent);
+                        string imageSrc = string.Format("data:" + Model.Animal.imageMimeType + ";base64,{0}", imageBase64);
+                        <img src="@imageSrc" alt="Profile picture of @Model.Animal.Nome" style="max-height:100px; max-width:120px" class="img-responsive img-rounded" />
+                    }
+                }
+            </div>
+        </dt>
         <dt>
             @Html.DisplayNameFor(model => model.CreationDate)
         </dt>
@@ -38,23 +56,23 @@
             @Html.DisplayNameFor(model => model.Animal)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Animal.Cor)
+            @Html.DisplayFor(model => model.Animal.Nome)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Utilizador)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Utilizador.Id)
+            @Html.DisplayFor(model => model.Utilizador.UserName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.EstadoAdocao)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.EstadoAdocao.EstadoAdocaoId)
+            @Html.DisplayFor(model => model.EstadoAdocao.estado)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.AdocaoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @*<a asp-action="Edit" asp-route-id="@Model.AdocaoId">Edit</a> |
+        <a asp-action="Index">Back to List</a>*@
 </div>
