--- a/AlbergueAnimal/Views/Adocao/Details.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Details.cshtml
@@ -10,6 +10,20 @@
     <h4>Adoção</h4>
     <hr />
     <dl class="dl-horizontal">
+
+        <dl>
+            
+                @{
+                    if (Model.Animal.imageContent != null && Model.Animal.imageMimeType.Contains("image"))
+                    {
+                        string imageBase64 = Convert.ToBase64String(Model.Animal.imageContent);
+                        string imageSrc = string.Format("data:" + Model.Animal.imageMimeType + ";base64,{0}", imageBase64);
+                        <img  src="@imageSrc" alt="Profile picture of @Model.Animal.Nome" style="max-height:100px; max-width:120px" class="img-responsive img-rounded" />
+                    }
+                }
+            
+        </dl>
+
         <dt>
             @Html.DisplayNameFor(model => model.CreationDate)
         </dt>
