--- a/AlbergueAnimal/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/AlbergueAnimal/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,15 +1,18 @@
 ﻿@page
 @model IndexModel
+
 @{
     ViewData["Title"] = "Perfil";
 }
 
 <h4>@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
+
 @*@Html.PartialAsync("_StatusMessage", Model.StatusMessage)*@
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
@@ -45,17 +48,26 @@
                     <input asp-for="Input.Morada" class="form-control" />
                 </div>
                 <div class="form-group">
+                    <label asp-for="Input.Cargo"></label>
+                    <input asp-for="Input.Cargo" class="form-control" />
+                </div>
+                <div class="form-group">
                     <label asp-for="Input.Genero"></label>
                     <input asp-for="Input.Genero" class="form-control" />
                 </div>
+
+               
                 <div class="form-group">
-                    <label asp-for="Input.FicheiroFoto"></label>
-                    <input asp-for="Input.FicheiroFoto" class="form-control" />
+                    <label class="control-label">Fotografia</label>
+                    <input type="file" class="form-control" name="p" />
                 </div>
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+
             </div>
+
+
             <button type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
