--- a/AlbergueAnimal/Views/Animals/viewAnimaisPdf.cshtml
+++ b/AlbergueAnimal/Views/Animals/viewAnimaisPdf.cshtml
@@ -6,7 +6,23 @@
 @{
     Layout = null;
 }
+<style>
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
 
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+    tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+  
+</style>
 <h2>Ficha Animais</h2>
 
 <p>
@@ -15,6 +31,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                Fotografia
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
@@ -45,37 +64,47 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Genero)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cor)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataEntrada)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataVacina)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Arquivado)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Raca.Designacao)
-                </td>
-                <td>
-                    @*<a asp-action="Edit" asp-route-id="@item.AnimalId">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.AnimalId">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.AnimalId">Delete</a>*@
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @{
+                    if (item.imageContent != null && item.imageMimeType.Contains("image"))
+                    {
+                        string imageBase64 = Convert.ToBase64String(item.imageContent);
+                        string imageSrc = string.Format("data:" + item.imageMimeType + ";base64,{0}", imageBase64);
+                        <img src="@imageSrc" alt="Profile picture of @item.Nome" style=" width: 50px;height: 50px; border-radius: 50%; padding: 0;width: 50px;height: 50px; line-height: 50px;" class="img-responsive img-rounded" />
+                    }
+                }
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genero)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cor)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataNascimento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataEntrada)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DataVacina)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Arquivado)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Raca.Designacao)
+            </td>
+            <td>
+                @*<a asp-action="Edit" asp-route-id="@item.AnimalId">Edit</a> |
+            <a asp-action="Details" asp-route-id="@item.AnimalId">Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.AnimalId">Delete</a>*@
+            </td>
+        </tr>
         }
     </tbody>
 </table>
