--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                     {
                         <li><a id="criarFuncionario" href="/Identity/Account/Register">Registar Funcionário</a></li>
                         <li><a asp-area="" asp-controller="Utilizador" asp-action="Index">Gestão Utilizadores</a></li>
+                        <li><a asp-area="" asp-controller="Stock" asp-action="Index">Gestão Stock</a></li>
                     }
                 </ul>
                 <partial name="_LoginPartial" />
