--- a/AlbergueAnimal/Views/Stock/Create.cshtml
+++ b/AlbergueAnimal/Views/Stock/Create.cshtml
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Fotografia Producto</label>
-                <input type="file" class="form-control" name="stockPicture" />
+                <input type="file" class="form-control" name="ThePicture" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
