--- a/AlbergueAnimal/Views/Stock/Details.cshtml
+++ b/AlbergueAnimal/Views/Stock/Details.cshtml
@@ -8,6 +8,18 @@
 
 <div>
     <h4>Product</h4>
+    <div>
+        @{
+            if (Model.imageContent != null && Model.imageMimeType.Contains("image"))
+            {
+                string imageBase64 = Convert.ToBase64String(Model.imageContent);
+                string imageSrc = string.Format("data:" + Model.imageMimeType + ";base64,{0}", imageBase64);
+                <img src="@imageSrc" alt="Profile picture of @Model.Nome" style="max-height:100px; max-width:120px" class="img-responsive img-rounded" />
+            }
+        }
+    </div>
+
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
