--- a/AlbergueAnimal/Views/Stock/Edit.cshtml
+++ b/AlbergueAnimal/Views/Stock/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductID" />
             <div class="form-group">
@@ -43,6 +43,12 @@
                 <input asp-for="QuantidadeLimite" class="form-control" />
                 <span asp-validation-for="QuantidadeLimite" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label class="control-label">Fotografia</label>
+                <input type="file" class="form-control" name="ThePicture" />
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
