--- a/AlbergueAnimal/Views/Stock/Index.cshtml
+++ b/AlbergueAnimal/Views/Stock/Index.cshtml
@@ -70,7 +70,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ProductID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.ProductID">Delete</a> |
+                @Html.ActionLink("Requisitar", "Requisitar", "Stock")
             </td>
         </tr>
 }
