--- a/AlbergueAnimal/Views/Stock/Create.cshtml
+++ b/AlbergueAnimal/Views/Stock/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Inserir Produto</h2>
 
-<h4>Product</h4>
+<h4>Produto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,13 +46,13 @@
                 <input type="file" class="form-control" name="ThePicture" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Confirmar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar à Lista</a>
 </div>
 
