--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -85,11 +85,12 @@
                 </td>
                 @if (User.IsInRole("Administrator"))
                 {
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |
-                        <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a> |
-                        <a asp-action="Delete" asp-route-id="@item.AnimalId">Arquivar</a>
-                    </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.AnimalId">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.AnimalId">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.AnimalId">Arquivar</a>
+                    @Html.ActionLink("Adptar", "CreateAnimalAdoption", "Adocao",  item.AnimalId);
+                </td>
                 }
                 else
                 {
