--- a/AlbergueAnimal/Views/Adocao/Create.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Create.cshtml
@@ -2,15 +2,15 @@
 @using Microsoft.AspNetCore.Identity
 
 @{
-    ViewData["Title"] = "Adotar um Animal";
+    ViewData["Title"] = "Create";
 }
 
 @inject SignInManager<Utilizador> SignInManager
 @inject UserManager<Utilizador> UserManager
 
-<h2>Adotar um Animal</h2>
+<h2>Create</h2>
 
-<h4>A minha adoção</h4>
+<h4>Adocao</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,49 +21,46 @@
                 <select asp-for="AnimalId" class="form-control" asp-items="ViewBag.AnimalId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input class="form-control" value="@UserManager.GetUserName(User)" disabled />
-                @* <input asp-for="UserName" class="form-control" value=" @UserManager.GetUserId(User)" >*@
-                @* <select asp-for="UserName" class="form-control" asp-items="ViewBag.UserName"></select>*@
-                @*<input asp-for="UserName" class="form-control" value=" @UserManager.GetUserId(User)">*@
-                @* <input asp-for="UserName" type="number" class="form-control" value=" @UserManager.GetUserId(User)">*@
-                @* <input asp-for="UserName" type="number" class="form-control" value=" @UserManager.GetUserId(User)">*@
-                @* <input asp-for="UserName" class="form-control" value="@UserManager.GetUserId(User)" type="hidden">*@
-                <input asp-for="UserName" class="form-control" value="@UserManager.GetUserId(User)" type="hidden">
-            </div>
-                    <!--@if (User.IsInRole("Administrator"))
-                    {
-                        <div class="form-group">
-                            <label asp-for="EstadoAdocaoId" class="control-label"></label>
-                            <select asp-for="EstadoAdocaoId" class="form-control" asp-items="ViewBag.EstadoAdocaoId"></select>
-                        </div>
-                    }-->
-                    <!--<div class="form-group">
-                        <label asp-for="CreationDate" class="control-label"></label>
-                        <input asp-for="CreationDate" class="form-control" />
-                        <span asp-validation-for="CreationDate" class="text-danger"></span>
-                    </div>-->
-                    <!--<div class="form-group">
-                        <label asp-for="LastUpdated" class="control-label"></label>
-                        <input asp-for="LastUpdated" class="form-control" />
-                        <span asp-validation-for="LastUpdated" class="text-danger"></span>
-                    </div>-->
-                    <!--<div class="form-group">
-                        <label asp-for="EndDate" class="control-label"></label>
-                        <input asp-for="EndDate" class="form-control" />
-                        <span asp-validation-for="EndDate" class="text-danger"></span>
-                    </div>-->
-                    <div class="form-group">
-                        <input type="submit" value="Concluir" class="btn btn-default" />
-                    </div>
-                </form>
-            </div>
-        </div>
 
-        <div>
-            <a asp-action="Index">Voltar à Lista</a>
-        </div>
+                <label asp-for="UserId" class="control-label"></label>
+                @*<select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>*@
+                <input asp-for="UserId" class="form-control" value="@UserManager.GetUserName(User)" disabled />
+                <input asp-for="UserId" class="form-control" value="@UserManager.GetUserId(User)" type="hidden">
+            </div>
+            @*<div class="form-group">
+                    <label asp-for="EstadoAdocaoId" class="control-label"></label>
+                    <select asp-for="EstadoAdocaoId" class ="form-control" asp-items="ViewBag.EstadoAdocaoId"></select>
+                </div>*@
+            @*<div class="form-group">
+                <label asp-for="CreationDate" class="control-label"></label>
+                <input asp-for="CreationDate" class="form-control" />
+                <span asp-validation-for="CreationDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastUpdated" class="control-label"></label>
+                <input asp-for="LastUpdated" class="form-control" />
+                <span asp-validation-for="LastUpdated" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EndDate" class="control-label"></label>
+                <input asp-for="EndDate" class="form-control" />
+                <span asp-validation-for="EndDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="Arquivado" /> @Html.DisplayNameFor(model => model.Arquivado)
+                    </label>
+                </div>
+            </div>*@
+            <div class="form-group">
+                <input type="submit" value="Concluir" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
+</div>
 
-        @section Scripts {
-            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-        }
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
