--- a/AlbergueAnimal/Views/Adocao/Index.cshtml
+++ b/AlbergueAnimal/Views/Adocao/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Adoções</h2>
+<h2>Index</h2>
 
 @if (User.IsInRole("Administrator"))
 {
@@ -12,7 +12,7 @@
         <a asp-action="Create">Registar Adoção</a> | <a asp-action="IndexArquivo">Arquivo</a>
     </p>
 
-  
+
 }
 else
 {
@@ -31,6 +31,9 @@ else
             <th>
                 @Html.DisplayNameFor(model => model.EndDate)
             </th>
+            @*<th>
+                @Html.DisplayNameFor(model => model.Arquivado)
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Animal)
             </th>
@@ -46,38 +49,44 @@ else
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreationDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastUpdated)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EndDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Animal.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Utilizador.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
-                </td>
-                @if (User.IsInRole("Administrator"))
-                {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreationDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastUpdated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndDate)
+            </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.Arquivado)
+            </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.Animal.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Utilizador.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EstadoAdocao.estado)
+            </td>
+
+            @if (User.IsInRole("Administrator"))
+            {
                 <td>
                     <a>@Html.ActionLink("Imprimir", "PrintAdoptionSlip", new { id = item.AdocaoId })</a> |
                     <a asp-action="Edit" asp-route-id="@item.AdocaoId">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.AdocaoId">Detalhes</a> |
                     <a asp-action="Delete" asp-route-id="@item.AdocaoId">Arquivar</a>
                 </td>
-                }
-            </tr>
+            }
+
+        </tr>
         }
     </tbody>
 </table>
+
 
 
 @using (Html.BeginForm())
