--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -21,9 +21,9 @@
 
     @*  <script src="~/amcharts4/examples/javascript/semi-circle-donut-chart/index.js"></script>*@
 
-    @*<script src="~/amcharts4/charts.js"></script>
-        <script src="~/amcharts4/core.js"></script>
-        <script src="~/amcharts4/themes/animated.js"></script>*@
+    <script src="~/amcharts4/charts.js"></script>
+    <script src="~/amcharts4/core.js"></script>
+    <script src="~/amcharts4/themes/animated.js"></script>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -39,7 +39,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" @*id="RedMenu"*@>
+    <nav class="navbar navbar-inverse navbar-fixed-top" @*id="RedMenu" *@>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#MainNavBar"
@@ -51,7 +51,7 @@
                 </button>
                 <!--<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Página Inicial</a>-->
             </div>
-            <div class="navbar-collapse collapse">
+            <div class=navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Início</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre</a></li>
@@ -64,13 +64,27 @@
                     }
                     @if (User.IsInRole("Administrator"))
                     {
-                        <li><a id="criarFuncionario" href="/Identity/Account/Register">Registar Funcionário</a></li>
-                        <li><a asp-area="" asp-controller="Utilizador" asp-action="Index">Gestão Utilizadores</a></li>
+
+                       
+                        <li>
+                            <a asp-area="" class="dropdown-toggle" data-toggle="dropdown">Gestão Utilizadores </a>
+                            <ul class="nav navbar-nav dropdown-menu">
+                                <li><a id="criarFuncionario" href="/Identity/Account/Register">Registar Funcionário</a></li>
+                                <li><a asp-area="" asp-controller="Utilizador" asp-action="Index">Gestão Utilizadores</a></li>
+                            </ul>
+                        </li>
                         <li><a asp-area="" asp-controller="Stock" asp-action="Index">Gestão Stock</a></li>
+                        <li> <a asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a> </li>
                     }
                 </ul>
+
                 <partial name="_LoginPartial" />
             </div>
+
+
+
+
+
         </div>
     </nav>
 
@@ -79,7 +93,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        
+
         <footer>
             @*<p>&copy; Albergue de Animais @DateTime.Now</p>*@
 
@@ -87,7 +101,7 @@
 
 
         </footer>
-       
+
     </div>
 
     <environment include="Development">
