--- a/AlbergueAnimal/Views/Shared/_Layout.cshtml
+++ b/AlbergueAnimal/Views/Shared/_Layout.cshtml
@@ -67,8 +67,8 @@
 
                        
                         <li>
-                            <a asp-area="" class="dropdown-toggle" data-toggle="dropdown">Gestão Utilizadores </a>
-                            <ul class="nav navbar-nav dropdown-menu">
+                            <a  asp-area="" class="dropdown-toggle" data-toggle="dropdown">Gestão Utilizadores </a>
+                            <ul class="nav navbar-nav dropdown-menu" role="menu">
                                 <li><a id="criarFuncionario" href="/Identity/Account/Register">Registar Funcionário</a></li>
                                 <li><a asp-area="" asp-controller="Utilizador" asp-action="Index">Gestão Utilizadores</a></li>
                             </ul>
