--- a/AlbergueAnimal/Views/Utilizador/EditarCargo.cshtml
+++ b/AlbergueAnimal/Views/Utilizador/EditarCargo.cshtml
@@ -22,7 +22,11 @@
                     <option>Administrator</option>
                     <option>Utilizador</option>
                     <option>Funcionario</option>
-                </select>
+                    <option>Gestor Adoções</option>
+                    <option>Gestor Animais</option>
+                    <option>Gestor Stock</option>
+                    <option>Gestor Recursos Humanos </option>
+              </select>
 
             </div>
             
