--- a/AlbergueAnimal/Views/Utilizador/Index.cshtml
+++ b/AlbergueAnimal/Views/Utilizador/Index.cshtml
@@ -44,12 +44,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
-            @if (User.IsInRole("Administrator"))
+            @if (User.IsInRole("Administrator") || User.IsInRole("Gestor Recursos Humanos"))
             {
                 <td>
-                    <a asp-action="EditarCargo" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-action="EditarCargo" asp-route-id="@item.Id">Editar Cargo</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Remover</a>
+                    @*<a asp-action="Delete" asp-route-id="@item.Id">Remover</a>*@
                 </td>
             }
             else
