--- a/AlbergueAnimal/wwwroot/css/footer.css
+++ b/AlbergueAnimal/wwwroot/css/footer.css
@@ -1,4 +1,4 @@
-.footer {
+/*.footer {
     background-color: #282828;
     padding: 0px;
 }
@@ -61,4 +61,4 @@
         color: #3d3d3d;
         padding: 0px;
     }
-}
+}*/
