--- a/AlbergueAnimal/Views/Animals/Index.cshtml
+++ b/AlbergueAnimal/Views/Animals/Index.cshtml
@@ -146,61 +146,61 @@
 
 
 @*<style>
-    .inforide {
-        box-shadow: 1px 2px 8px 0px #f1f1f1;
-        background-color: white;
-        border-radius: 8px;
-        height: 125px;
-    }
-
-    .ridetwo {
-        background-color: #9A75FE;
-        padding-top: 30px;
-        border-radius: 8px 0px 0px 8px;
-        text-align: center;
-        height: 125px;
-        margin-left: 15px;
-    }
-
-    .fontsty {
-        margin-right: -15px;
-    }
-
-        .fontsty h2 {
-            color: #6E6E6E;
-            font-size: 35px;
-            margin-top: 15px;
-            text-align: right;
-            margin-right: 30px;
+        .inforide {
+            box-shadow: 1px 2px 8px 0px #f1f1f1;
+            background-color: white;
+            border-radius: 8px;
+            height: 125px;
         }
 
-        .fontsty h4 {
-            color: #6E6E6E;
-            font-size: 25px;
-            margin-top: 20px;
-            text-align: right;
-            margin-right: 30px;
+        .ridetwo {
+            background-color: #9A75FE;
+            padding-top: 30px;
+            border-radius: 8px 0px 0px 8px;
+            text-align: center;
+            height: 125px;
+            margin-left: 15px;
         }
 
-    .ridetwo img {
-        width: 60%;
-    }
-</style>
+        .fontsty {
+            margin-right: -15px;
+        }
+
+            .fontsty h2 {
+                color: #6E6E6E;
+                font-size: 35px;
+                margin-top: 15px;
+                text-align: right;
+                margin-right: 30px;
+            }
+
+            .fontsty h4 {
+                color: #6E6E6E;
+                font-size: 25px;
+                margin-top: 20px;
+                text-align: right;
+                margin-right: 30px;
+            }
+
+        .ridetwo img {
+            width: 60%;
+        }
+    </style>
 
 
-<div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-2 mt-4">
-    <div class="inforide">
-        <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-4 col-4 ridetwo">
-                <img src="~/images/1093px-Black_Paw.svg.png">
-            </div>
-            <div class="col-lg-9 col-md-8 col-sm-8 col-8 fontsty">
-                <h4>Animais</h4>
-                <h2>120</h2>
+    <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-2 mt-4">
+        <div class="inforide">
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-4 col-4 ridetwo">
+                    <img src="~/images/1093px-Black_Paw.svg.png">
+                </div>
+                <div class="col-lg-9 col-md-8 col-sm-8 col-8 fontsty">
+                    <h4>Animais</h4>
+                    <h2>120</h2>
+                </div>
             </div>
         </div>
-    </div>
-</div>*@
+    </div>*@
 
 
 
@@ -254,5 +254,10 @@
 
 
 }
+
+
+@if (User.IsInRole("Administrator") || User.IsInRole("Gestor Animais"))
+{
 <!-- HTML -->
 <div id="chartdiv"></div>
+}
