--- a/AlbergueAnimal/Views/Home/Contact.cshtml
+++ b/AlbergueAnimal/Views/Home/Contact.cshtml
@@ -1,30 +1,95 @@
 ﻿<br />
+@model AlbergueAnimal.Models.ContactViewModel
 @{
     ViewData["Title"] = "Contactos";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+@*<h3>@ViewData["Message"]</h3>*@
 
 @*<h4>Os nossos contactos:</h4>
-<br />
+    <br />
 
-<strong>Localização:</strong>
-<br />
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.9995258072295!2d-9.05270298468658!3d38.63554017961181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd194829940eee21%3A0xe99296e7d2bb9e3b!2sQuinta+do+Mi%C3%A3o!5e1!3m2!1spt-BR!2spt!4v1543595294823" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <strong>Localização:</strong>
+    <br />
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.9995258072295!2d-9.05270298468658!3d38.63554017961181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd194829940eee21%3A0xe99296e7d2bb9e3b!2sQuinta+do+Mi%C3%A3o!5e1!3m2!1spt-BR!2spt!4v1543595294823" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-<br /><br />
-<strong>Horários:</strong> 
-<br />2ª a 6ªFeira, 14h00-16h30
-<br />Sábado, 11h00-13h00
-<br />Domingo, <b style="color:#d93025">Encerrado</b>
+    <br /><br />
+    <strong>Horários:</strong>
+    <br />2ª a 6ªFeira, 14h00-16h30
+    <br />Sábado, 11h00-13h00
+    <br />Domingo, <b style="color:#d93025">Encerrado</b>
 
-<br /><br />
-<strong>Facebook:</strong> <a href="https://www.facebook.com/quintamiao/">Facebook</a>
+    <br /><br />
+    <strong>Facebook:</strong> <a href="https://www.facebook.com/quintamiao/">Facebook</a>
 
-<a href="https://www.facebook.com/quintamiao/">
-    <img border="0" alt="Facebook" src="~/images/facebook.png" width="50" height="50">
-</a>
+    <a href="https://www.facebook.com/quintamiao/">
+        <img border="0" alt="Facebook" src="~/images/facebook.png" width="50" height="50">
+    </a>
 
-<br /><br />
-<strong>Telefone:</strong> 21 206 8625*@
+    <br /><br />
+    <strong>Telefone:</strong> 21 206 8625*@
 
+
+<div class="center">
+    <div class="col-md-6">
+        <div>
+            @if (ViewBag.Message == null)
+            {
+                <div>
+                    <form method="post">
+                        <div class="form-group">
+                            <label asp-for="Name">Nome</label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name"
+                                  class="text-muted"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Email">Email</label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email"
+                                  class="text-muted"></span>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label asp-for="Subject">Assunto</label>
+                            <select asp-for="Subject" class="form-control">
+                                <option>Geral</option>
+                                <option>Adoções</option>
+                                <option>Animais</option>
+                            </select>
+                            <span asp-validation-for="Subject"
+                                  class="text-muted"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Message">Mensagem</label>
+                            <textarea rows="5" cols="15"
+                                      asp-for="Message" class="form-control"></textarea>
+                            <span asp-validation-for="Message"
+                                  class="text-muted"></span>
+                        </div>
+                        <div>
+                            <button type="submit"
+                                    class="btn btn-success">
+                                Enviar
+                            </button>
+                        </div>
+
+                    </form>
+                </div>
+            }
+        </div>
+
+        <div>
+            <div>
+                @if (ViewBag.Message != null)
+                {
+                    <div>@ViewBag.Message</div>
+
+
+                }
+            </div>
+        </div>
+    </div>
+
+</div>
