--- a/AlbergueAnimal/wwwroot/amcharts4/examples/javascript/simple-pie-chart/index.css
+++ b/AlbergueAnimal/wwwroot/amcharts4/examples/javascript/simple-pie-chart/index.css
@@ -7,8 +7,9 @@ body {
 }
 
 #chartdiv {
-  width: 100%;
-  max-height: 600px;
-  height: 100vh;
+  width: 75%;
+  max-height: 300px;
+  height: 50vh;
+ /*resize*/
  
 }
