--- a/AlbergueAnimal/wwwroot/css/estilos.css
+++ b/AlbergueAnimal/wwwroot/css/estilos.css
@@ -1,14 +1,13 @@
 ﻿
 
 
-/* Navbar container */
+/*
 .navbar {
     overflow: hidden;
     background-color: #333;
     font-family: Arial;
 }
 
-    /* Links inside the navbar */
     .navbar a {
         float: left;
         font-size: 16px;
@@ -18,13 +17,13 @@
         text-decoration: none;
     }
 
-/* The dropdown container */
+
 .dropdown {
     float: left;
     overflow: hidden;
 }
 
-    /* Dropdown button */
+    
     .dropdown .dropbtn {
         font-size: 16px;
         border: none;
@@ -32,16 +31,17 @@
         color: white;
         padding: 14px 16px;
         background-color: inherit;
-        font-family: inherit; /* Important for vertical align on mobile phones */
-        margin: 0; /* Important for vertical align on mobile phones */
+        font-family: inherit; 
+        margin: 0; 
     }
 
-    /* Add a red background color to navbar links on hover */
+
     .navbar a:hover, .dropdown:hover .dropbtn {
         background-color: red;
     }
 
-/* Dropdown content (hidden by default) */
+
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -51,7 +51,7 @@
     z-index: 1;
 }
 
-    /* Links inside the dropdown */
+
     .dropdown-content a {
         float: none;
         color: black;
@@ -61,15 +61,14 @@
         text-align: left;
     }
 
-        /* Add a grey background color to dropdown links on hover */
         .dropdown-content a:hover {
             background-color: #ddd;
         }
 
-/* Show the dropdown menu on hover */
+
 .dropdown:hover .dropdown-content {
     display: block;
-}
+}*/
 
 
 
@@ -130,1057 +129,3 @@
 
 
 
-
-
-
-@font-face {
-    font-family: "Gravity-Bold";
-    src: url('/fonts/Gravity-Bold.otf');
-}
-
-@font-face {
-    font-family: "Gravity-Regular";
-    src: url('/fonts/Gravity-Regular.otf');
-}
-
-@font-face {
-    font-family: "Gravity-Light";
-    src: url('/fonts/Gravity-Light.otf');
-}
-
-@font-face {
-    font-family: "Gravity-Book";
-    src: url('/fonts/Gravity-Book.otf');
-}
-
-
-
-
-
-
-
-
-
-
-
-.custom-toggler.navbar-toggler {
-    border-color: rgb(220,220,220);
-}
-
-.custom-toggler .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(50,50,50, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-
-body .scrollN, body .scrollN:hover {
-    font-size: 1em;
-    color: white;
-    font-family: 'Gravity-Regular';
-}
-
-.navbar-toggler-icon {
-    color: black;
-}
-
-
-.navbar-nav li {
-    -webkit-transition: all .7s ease-out;
-    transition: all .7s ease-out;
-}
-
-    .navbar-nav li:hover {
-        background-color: rgba(220,220,220,0.15);
-    }
-
-/* Medium devices and smaller (tablets, 991px and lower width)
-    For the navbar toggle mode */
-@media (max-width: 991px) {
-    #global-nav {
-        min-height: 56px !important;
-        background-color: white;
-    }
-}
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-    .transparent {
-        background-color: rgba(0, 0, 0, 0);
-    }
-
-    #global-nav {
-        height: 120px;
-        -webkit-transition: height .5s, line-height .5s;
-        transition: height .5s, line-height .5s;
-    }
-
-    .scrolled-nav {
-        background-color: white;
-        height: 60px !important;
-        line-height: 60px;
-    }
-
-    .counter {
-        width: 20px;
-        height: 20px;
-        background: black;
-        color: #fff;
-        position: fixed;
-        top: 120px;
-        right: 0;
-    }
-
-    .navbar-nav li, .navbar-brand {
-        padding-right: 10px;
-        padding-left: 10px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-@font-face {
-    font-family: "Gravity-Bold";
-    src: url('/fonts/Gravity-Bold.otf');
-}
-
-@font-face {
-    font-family: "Gravity-Regular";
-    src: url('/fonts/Gravity-Regular.otf');
-}
-
-@font-face {
-    font-family: "Gravity-Light";
-    src: url('/fonts/Gravity-Light.otf');
-}
-
-@font-face {
-    font-family: "Gravity-Book";
-    src: url('/fonts/Gravity-Book.otf');
-}
-
-
-
-
-
-
-
-
-
-
-
-.landImg {
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.sec div:first-of-type {
-    /* padding-top: 40px; */
-}
-
-/* .sec > div:last-of-type {
-    padding-bottom: 60px;
-} */
-
-body .padtop0 {
-    padding-top: 0px;
-}
-
-body .padX0 {
-    padding-left: 0px;
-    padding-right: 0px;
-}
-
-.sec > .container {
-    padding-bottom: 60px;
-}
-
-.white {
-    color: white;
-}
-
-.centerImg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.padB40 {
-    padding-bottom: 40px;
-}
-
-.w100 {
-    width: 100%;
-}
-
-.subText, .listPad li {
-    font-family: "Gravity-Regular";
-    font-size: 1em;
-    letter-spacing: 1px;
-    margin: 0px;
-}
-
-.subP {
-    padding-left: 60px;
-    padding-right: 60px;
-    font-family: "Gravity-Regular";
-    font-size: 1em;
-    letter-spacing: 1px;
-}
-
-.subPmin {
-    padding-left: 60px;
-    padding-right: 60px;
-    font-family: "Gravity-Regular";
-}
-
-.extPad {
-    padding: 60px;
-    padding-top: 20px;
-}
-
-.listPad li {
-    padding: 20px;
-    padding-top: 0px;
-}
-
-.listPad {
-    padding: 40px;
-    padding-left: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: 0px;
-}
-
-.minpadY {
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.padY40 {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.subTitle {
-    font-family: "Gravity-Regular";
-    letter-spacing: 10px;
-    padding-left: 60px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-bottom: 0px;
-}
-
-.textCent, .cenX {
-    text-align: center;
-}
-
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-
-.linkGrey, .linkGrey:hover {
-    padding: 6px;
-    color: gray;
-    font-family: "Gravity-Regular";
-}
-
-.backDark {
-    background-color: #191919;
-}
-
-.exText div h5 {
-    font-family: "Gravity-Regular";
-    font-size: 1.2em;
-}
-
-.exText div {
-    padding: 0px;
-}
-
-.round3 {
-    border-radius: 3px;
-}
-
-.titleMain {
-    font-family: "Gravity-Regular";
-    letter-spacing: 20px;
-}
-
-.regTitle {
-    font-family: "Gravity-Regular";
-    letter-spacing: 5px;
-}
-
-.subT2 {
-    font-family: "Gravity-Regular";
-    letter-spacing: 5px;
-}
-
-.btnLinks .col-md-4 {
-    text-align: center;
-}
-
-    .btnLinks .col-md-4 p {
-        padding-bottom: 10px;
-        font-family: "Gravity-Regular";
-    }
-
-.leftCenter {
-    display: inline-block;
-    text-align: left;
-}
-
-.btnLinks.extPad {
-    padding-bottom: 120px;
-}
-
-/* Suitable for mobile devices */
-
-@media (max-width: 991px) {
-    .sub {
-        letter-spacing: 0px;
-    }
-}
-
-@media (max-width: 767px) {
-    .btnLinks .bot {
-        padding-bottom: 60px;
-    }
-
-    .sub {
-        letter-spacing: 10px;
-    }
-
-    .btnLinks {
-        padding-bottom: 0px;
-    }
-
-    .extPad, .subP {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
-    .subTitle {
-        padding-left: 20px;
-    }
-
-    .listPad {
-        padding-left: 40px;
-        padding-right: 0px;
-    }
-
-        .listPad li {
-            padding-left: 0px;
-            padding-right: 0px;
-        }
-}
-
-@media (max-width: 458px) {
-    .titleMain {
-        letter-spacing: 10px;
-    }
-
-    .exText div h5 {
-        font-family: "Gravity-Regular";
-        font-size: 1em;
-    }
-
-    .topPad {
-        padding-top: 120px;
-    }
-
-    .sub {
-        letter-spacing: 0px;
-    }
-}
-
-@media (max-width: 369px) {
-    .titleMain {
-        font-size: 2em;
-        letter-spacing: 0px;
-    }
-}
-
-@media (min-width: 992px) {
-    .topPad {
-        padding-top: 200px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-body, html {
-    height: 100%;
-    margin: 0;
-}
-
-.homeImg {
-    background-image: url("../images/IMG_2130.jpg");
-    background-image: url("../images/IMG_2134.jpg");
-    background-image: url("../images/IMG_1691.jpg");
-    background-image: url("../images/IMG_1068.jpg");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.center-v {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.center2 {
-    width: 50%;
-    margin: 0 auto;
-}
-
-.homeDiv {
-    font-family: "Gravity-Book";
-    color: white;
-}
-
-.homeMainTitle {
-    font-size: 3em;
-}
-
-.homeSubTitle {
-    font-size: 1em;
-}
-
-.homeSouth {
-    text-align: center;
-    position: absolute;
-    left: calc(50% - 54px);
-    top: calc(100% - 120px);
-}
-
-.smoothScrollBtn {
-    color: white;
-    /* margin-top: -20px; */
-    position: relative;
-    border: none;
-    background: none;
-    font-size: 3em;
-}
-
-    .smoothScrollBtn:focus {
-        outline: 0;
-    }
-
-.stealthLink, .stealthLink:focus, .stealthLink:hover {
-    color: white;
-    outline: 0;
-    text-decoration: none;
-    font-family: "Gravity-Regular";
-}
-
-.circleImg {
-    border-radius: 50%;
-    height: 200px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    float: right;
-}
-
-.pad20 {
-    padding: 20px;
-    padding-bottom: 4px;
-}
-
-.rowPad {
-    padding: 40px;
-}
-
-.passionDiv {
-    height: 50px;
-    background-color: white;
-}
-
-.tileTitle {
-    padding-top: 10px;
-    text-align: center;
-}
-
-.whiteText {
-    color: white;
-}
-
-.tileDesc {
-    text-align: center;
-    padding: 10px;
-    padding-left: 5%;
-    padding-right: 5%;
-    font-family: "Gravity-Regular";
-}
-
-.centerLinks {
-    padding: 0px;
-    margin: 0px;
-    text-align: center;
-}
-
-    .centerLinks a {
-        color: gray;
-        font-family: "Gravity-Regular";
-        transition: 0.2s ease-in-out;
-    }
-
-        .centerLinks a:hover {
-            /* text-decoration: underline; */
-            color: white;
-        }
-
-.softwareImg {
-    background-color: #282828;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.sub {
-    font-family: "Gravity-Regular";
-    letter-spacing: 10px;
-}
-
-.tilePadWide {
-    padding: 40px;
-}
-
-.tilePadMin {
-    padding: 10px;
-}
-
-.centerLinks > li > a {
-    text-decoration: none;
-}
-
-.centerLinks .brText {
-    display: inline-block;
-    color: #42536d;
-}
-
-.videoBack {
-    background-color: #E62117;
-}
-
-.centerBtn {
-    margin: 40px;
-    margin-bottom: 30px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.softwareDiv {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.softwareTitle {
-    color: #b5b5b5;
-}
-
-.electronicsBack {
-    /* background-image: url("../images/IMG_1716.jpg"); */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.centerTitle {
-    text-align: center;
-    padding-bottom: 60px;
-}
-
-.leftTitle {
-    text-align: left;
-    vertical-align: middle;
-    line-height: 50px;
-    font-family: "Gravity-Book";
-    font-size: 2em;
-    padding-left: 50px;
-    padding-bottom: 40px;
-}
-
-.learnFilmsBtn {
-    border-color: #ffdbdb;
-    background-color: #ffdbdb;
-    color: #E62117;
-}
-
-    .learnFilmsBtn:hover {
-        -webkit-transition: all 0.3s ease-out;
-        transition: all 0.3s ease-out;
-        background-color: white;
-        border-color: white;
-        color: #E62117;
-    }
-
-.photoBack {
-    /* background-image: url("../images/IMG_7509.JPG"); */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* padding-left: 0px;
-    padding-right: 0px; */
-}
-
-.backBlur {
-    background-color: rgba(0,0,0,0.4);
-}
-
-/* Mobile devices */
-@media (max-width: 767px) {
-    .circleImg {
-        float: none;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        height: 120px;
-    }
-
-    .rowPad {
-        padding-right: 0px;
-        padding-left: 0px;
-    }
-
-    .tilePadWide {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-}
-
-@media (min-width: 768px) {
-    .softwareDiv, .electronicsDiv {
-        padding-top: 60px;
-        padding-bottom: 80px;
-    }
-
-    .aboutMe {
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-
-    .tilePad {
-        padding: 10px;
-        padding-top: 80px;
-        padding-bottom: 80px;
-    }
-}
-
-@media (max-width: 991px) {
-    .extraSpace {
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-
-    .centerTitle {
-        padding-bottom: 40px;
-    }
-}
-
-@media (min-width: 992px) {
-    .videoBack div div .tilePadMin {
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-}
-
-
-body, html {
-    height: 100%;
-    margin: 0;
-}
-
-.homeImg {
-    background-image: url("../images/IMG_2130.jpg");
-    background-image: url("../images/IMG_2134.jpg");
-    background-image: url("../images/IMG_1691.jpg");
-    background-image: url("../images/IMG_1068.jpg");
-
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.center-v {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.center2 {
-    width: 50%;
-    margin: 0 auto;
-}
-
-.homeDiv {
-    font-family: "Gravity-Book";
-    color: white;
-}
-
-.homeMainTitle {
-    font-size: 3em;
-}
-
-.homeSubTitle {
-    font-size: 1em;
-}
-
-.homeSouth {
-    text-align: center;
-    position: absolute;
-    left: calc(50% - 54px);
-    top: calc(100% - 120px);
-}
-
-.smoothScrollBtn {
-    color: white;
-    /* margin-top: -20px; */
-    position: relative;
-    border: none;
-    background: none;
-    font-size: 3em;
-}
-
-.smoothScrollBtn:focus {
-    outline: 0;
-}
-
-.stealthLink, .stealthLink:focus, .stealthLink:hover {
-    color: white;
-    outline: 0;
-    text-decoration: none;
-    font-family: "Gravity-Regular";
-}
-
-.circleImg {
-    border-radius: 50%;
-    height: 200px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    float: right;
-}
-
-.pad20 {
-    padding: 20px;
-    padding-bottom: 4px;
-}
-
-.rowPad {
-    padding: 40px;
-}
-
-.passionDiv {
-    height: 50px;
-    background-color: white;
-}
-
-.tileTitle {
-    padding-top: 10px;
-    text-align: center;
-}
-
-.whiteText {
-    color: white;
-}
-
-.tileDesc {
-    text-align: center;
-    padding: 10px;
-    padding-left: 5%;
-    padding-right: 5%;
-    font-family: "Gravity-Regular";
-}
-
-.centerLinks {
-    padding: 0px;
-    margin: 0px;
-    text-align: center;
-
-}
-
-.centerLinks a {
-    color: gray;
-    font-family: "Gravity-Regular";
-    transition: 0.2s ease-in-out;
-}
-
-.centerLinks a:hover {
-    /* text-decoration: underline; */
-    color: white;
-}
-
-.softwareImg {
-    background-color: #282828;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.sub {
-    font-family: "Gravity-Regular";
-    letter-spacing: 10px;
-}
-
-.tilePadWide {
-    padding: 40px;
-}
-
-.tilePadMin {
-    padding: 10px;
-}
-
-.centerLinks > li > a {
-    text-decoration: none;
-}
-
-.centerLinks .brText {
-    display: inline-block;
-    color: #42536d;
-}
-
-.videoBack {
-    background-color: #E62117;
-}
-
-.centerBtn {
-    margin: 40px;
-    margin-bottom: 30px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.softwareDiv {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.softwareTitle {
-    color: #b5b5b5;
-}
-
-.electronicsBack {
-    /* background-image: url("../images/IMG_1716.jpg"); */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.centerTitle {
-    text-align: center;
-    padding-bottom: 60px;
-}
-
-.leftTitle {
-    text-align: left;
-    vertical-align: middle;
-    line-height: 50px;
-    font-family: "Gravity-Book";
-    font-size: 2em;
-    padding-left: 50px;
-    padding-bottom: 40px;
-}
-
-.learnFilmsBtn {
-    border-color: #ffdbdb;
-    background-color: #ffdbdb;
-    color: #E62117;
-}
-
-.learnFilmsBtn:hover {
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-    background-color: white;
-    border-color: white;
-    color: #E62117;
-}
-
-.photoBack {
-    /* background-image: url("../images/IMG_7509.JPG"); */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* padding-left: 0px;
-    padding-right: 0px; */
-}
-
-.backBlur {
-    background-color: rgba(0,0,0,0.4);
-}
-
-/* Mobile devices */
-@media (max-width: 767px) {
-    .circleImg {
-        float: none;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        height: 120px;
-    }
-    .rowPad {
-        padding-right: 0px;
-        padding-left: 0px;
-    }
-    .tilePadWide {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-}
-
-@media (min-width: 768px) {
-    .softwareDiv, .electronicsDiv {
-        padding-top: 60px;
-        padding-bottom: 80px;
-    }
-    .aboutMe {
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-    .tilePad {
-        padding: 10px;
-        padding-top: 80px;
-        padding-bottom: 80px;
-    }
-
-}
-
-@media (max-width: 991px) {
-    .extraSpace {
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-    .centerTitle {
-        padding-bottom: 40px;
-    }
-}
-
-@media (min-width: 992px) {
-    .videoBack div div .tilePadMin {
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.footer {
-    background-color: #282828;
-    padding: 0px;
-}
-
-.socialIcons li a img {
-    vertical-align: middle;
-    padding: 5px;
-    height: 50px;
-}
-
-.footerText {
-    font-family: "Gravity-Regular";
-    text-align: center;
-    padding-top: 60px;
-    color: white;
-}
-
-.bottomLinksDiv {
-    background-color: #191919;
-    padding: 30px;
-}
-
-    .bottomLinksDiv div div div p {
-        margin: 0px;
-    }
-
-    .bottomLinksDiv a {
-        font-family: "Gravity-Regular";
-        text-align: center;
-        color: white;
-    }
-
-.bottomLinks li, .bottomLinks p {
-    display: inline;
-}
-
-.bottomLinks p {
-    color: white;
-    padding: 20px;
-}
-
-.bottomLinksDiv div div a {
-    color: white;
-}
-
-.centerLinks {
-    padding: 0px;
-    margin: 0px;
-    text-align: center;
-}
-
-@media (min-width: 768px) {
-    .bottomLinksDiv div div a {
-        display: inline;
-        text-align: center;
-    }
-
-    .bottomLinksDiv div .col-md {
-        display: block;
-        text-align: center;
-        color: #3d3d3d;
-        padding: 0px;
-    }
-}
